--- a/EliteDangerousINARA/src/EliteDangerousINARA/EliteDangerousINARA.csproj
+++ b/EliteDangerousINARA/src/EliteDangerousINARA/EliteDangerousINARA.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <VersionPrefix>1.0.0-preview1</VersionPrefix>
@@ -6,7 +6,7 @@
     <Copyright>Copyright © 2019-2020 NewSoftWorld</Copyright>
     <AssemblyTitle>Elite:Dangerous INARA</AssemblyTitle>
     <Authors>Denis Ibragimov</Authors>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyName>NSW.EliteDangerous.INARA</AssemblyName>
     <RootNamespace>NSW.EliteDangerous.INARA</RootNamespace>
@@ -18,8 +18,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="NSW.EliteDangerous.API" Version="1.0.26" />
   </ItemGroup>
 
