--- a/EliteDangerousINARA/src/EliteDangerousINARA/EliteDangerousINARA.csproj
+++ b/EliteDangerousINARA/src/EliteDangerousINARA/EliteDangerousINARA.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>1.0.0-preview1</VersionPrefix>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <Description>Frontier Elite:Dangerous for INARA integration library</Description>
     <Copyright>Copyright © 2019-2020 NewSoftWorld</Copyright>
     <AssemblyTitle>Elite:Dangerous INARA</AssemblyTitle>
